# ToraDynamics

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/common_function/file/: path.h
src/common_function/logger/: abstract_logger.h  file_logger.h  formatter.h  logger.h  logger_proxy.h  terminal_logger.h
src/defines/: data.h  stream.h  string.h
src/demo/: CMakeLists.txt  demo.cc  demo_logger.cc  demo_rotate.cc
src/math/: ToraConstant.h  ToraFrame.h  ToraMatrix.h  ToraMatrix33.cc  ToraMatrix33.h  ToraQuaternion.cc  ToraQuaternion.h  ToraVector3.cc  ToraVector3.h
